# CDEK_telegram_bot

./: CDEK_bot.py  Makefile  README.md  pyproject.toml
